--- a/TODO
+++ b/TODO
@@ -114,5 +114,8 @@
   version that is non-threadsafe.
 
 - Tests for formultiperm.
+- Tests for todigits, todigitstring, fromdigits
 
-- Tests for binary.
+- we have invmod: add mulmod, divmod, expmod, sqrtmod
+
+- vecany, vecall, vecnone (very useful, but do they belong?)
