--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl module Math::Prime::Util
 
+0.58 2016-?
+
+    [FUNCTIONALITY AND PERFORMANCE]
+
+    - Fixed incorrect table entry for 2^16th Ramanujan prime count.
+
 0.57 2016-01-03
 
     [ADDED]
