--- a/Changes
+++ b/Changes
@@ -2,6 +2,13 @@ Revision history for Perl module Math::Prime::Util
 
 0.58 2016-?
 
+    [ADDED]
+
+    - addmod(a, b, n)                     a + b mod n
+    - mulmod(a, b, n)                     a * b mod n
+    - divmod(a, b, n)                     a / b mod n
+    - powmod(a, b, n)                     a ^ b mod n
+
     [FUNCTIONALITY AND PERFORMANCE]
 
     - Fixed incorrect table entry for 2^16th Ramanujan prime count.
