--- a/TODO
+++ b/TODO
@@ -102,3 +102,7 @@
 - We should have a way to exit a forprimes loop.  E.g. add a lastfor() call.
   Nested calls are doable, but threading is a bear.  Perhaps do a first
   version that is non-threadsafe.
+
+- sum primes should be done using a modified fast prime count function.
+  The current code sieves, and is very fast for small inputs, but has
+  much worse growth for large inputs.
