--- a/Changes
+++ b/Changes
@@ -16,7 +16,7 @@ Revision history for Perl module Math::Prime::Util
     - mulmod(a, b, n)                     a * b mod n
     - divmod(a, b, n)                     a / b mod n
     - powmod(a, b, n)                     a ^ b mod n
-    - sqrtmod(a, p)                       modular square root
+    - sqrtmod(a, n)                       modular square root
     - is_euler_pseudoprime(n,a[...])      Euler test to given bases
     - is_primitive_root(r, n)             is r a primitive root mod n
     - is_quasi_carmichael(n)              is n a Quasi-Carmichael number
