--- a/TODO
+++ b/TODO
@@ -107,3 +107,7 @@
   The current code sieves, and is very fast for small inputs, but has
   much worse growth for large inputs.  The table method is probably fine
   for native size results.
+
+- PP sumdigits new API
+
+- fromdigits([7,2,2],2) = 30 in Pari/GP, 34 for us.  (Pari bug?)
