--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Revision history for Perl module Math::Prime::Util
 
+0.59 2016-?
+
+    [FUNCTIONALITY AND PERFORMANCE]
+
+    - mertens() uses a little less memory.
+
+
+
 0.58 2016-05-21
 
     [API Changes]
