--- a/Changes
+++ b/Changes
@@ -39,6 +39,12 @@ Revision history for Perl module Math::Prime::Util
 
     - Integer root code rewritten and now exported.
 
+    - is_primitive_root(1,0) returns 0 instead of fp exception.
+
+    - Redo the way GMP functions are found to avoid function auto-vivication
+      issues.  We store the available functions before loading the PP code.
+
+    - 2x speedup for znlog with bigint values.
 
 
 0.58 2016-05-21
