--- a/TODO
+++ b/TODO
@@ -115,3 +115,5 @@
 
 - divsum and divsummult as block functions.
   The latter does sum = vecprod(1 + f(p_i) + f(p_i^2) + ... f(p_i^e) for all p.
+
+- surround_primes
