--- a/Changes
+++ b/Changes
@@ -25,6 +25,9 @@ Revision history for Perl module Math::Prime::Util
 
     - Small performance change to AKS (r,s) selection tuning.
 
+    - On x86_64, use Montgomery math for Pollard/Brent Rho.  This speeds up
+      factoring significantly for large native inputs (e.g. 10-20 digits).
+
 
 0.59 2016-08-03
 
