--- a/Changes
+++ b/Changes
@@ -6,6 +6,8 @@ Revision history for Perl module Math::Prime::Util
 
     - is_power(-1,k) now returns true for odd k.
 
+    - RiemannZeta with GMP was not subtracting 1 from results > 9.
+
     - PP Bernoulli algorithm changed to Seidel from Brent-Harvey.  2x speedup.
       Math::BigNum is 10x faster, and our GMP code is 2000x faster.
 
