--- a/Changes
+++ b/Changes
@@ -14,6 +14,8 @@ Revision history for Perl module Math::Prime::Util
     - LambertW changes in C and PP.  Much better initial approximation, and
       switch iteration from Halley to Fritsch.  2 to 10x faster.
 
+    - Try to use GMP LambertW for bignums if it is available.
+
 
 0.60 2016-10-09
 
