--- a/TODO
+++ b/TODO
@@ -121,3 +121,5 @@
 - numtoperm and permtonum.
   Perhaps Bonet: https://github.com/soniakeys/perm/blob/master/lex.go
   Also consider randperm(n)
+
+- tests for is_pillai
