--- a/Changes
+++ b/Changes
@@ -29,7 +29,8 @@ Revision history for Perl module Math::Prime::Util
 
     - primes.pl uses twin_primes function for ~3x speedup.
 
-    - native chinese can handle some cases that used to overflow.
+    - native chinese can handle some cases that used to overflow.  Use Shell
+      sort on moduli to prevent pathological-but-reasonable test case.
 
     - chinese directly to GMP
 
