Export inverse_li including PP, docs, tests, etc.

--- a/Changes
+++ b/Changes
@@ -5,6 +5,7 @@ Revision history for Perl module Math::Prime::Util
     [ADDED]
 
     - is_pillai(p)           Returns 0 or v wherev v! % n == n-1 and n % v != 1
+    - inverse_li(n)          Integer inverse of Logarithmic Integral
 
     [FUNCTIONALITY AND PERFORMANCE]
 
@@ -35,6 +36,8 @@ Revision history for Perl module Math::Prime::Util
     - chinese directly to GMP
 
     - Switch to Bytes::Random::Secure::Tiny -- fewer dependencies.
+
+    - PP nth_prime_approx has better MSE and uses inverse_li above 10^12.
 
 
 0.60 2016-10-09
