--- a/TODO
+++ b/TODO
@@ -121,10 +121,40 @@
 
 - Berkane/Dusart 2016, Axler 2016, Axler 2017 could tune prime count bounds.
 
-- Split ramanujan upper limit multipliers into two tables, one low res for
-  n < 1e9, another high res for after.
+x export irand() irand64() drand() random_bytes(UV) urandomb(UV) urandomm(SV)
+x Docs for irand() irand64() drand() random_bytes(UV) urandomb(UV) urandomm(SV)
+x Tests for irand() irand64() drand()
+x ntheory irand() irand64() drand() random_bytes(UV) urandomb(UV) urandomm(SV)
+x Seeding for rand funcs
+x PPFE for irand() irand64() drand() random_bytes(UV) urandomb(UV) urandomm(SV)
+x PP for irand() irand64() drand() random_bytes(UV) urandomb(UV) urandomm(SV)
+x seed for PP
+x remove irand function from config
+x RandomPrimes irand updates
+x :seed ntheory
+x :seed tests
+x update MANIFEST
+x Tests for random_bytes(UV) urandomb(UV) urandomm(SV) srand seed_csprng
+x proper version of RNG.pm
+x change seed interface, remove bytes.
+x Add a test like uniform from Math::Random::Secure
 
-- on startup and config of gmp/irand, check gmp version and seeded, and do a sequence of:
-   *random_prime = (usegmp) ? &Math::Prime::Util::GMP::random_prime : &::_random_prime;
-  need to update some of the GMP functions to deal with single vs. double args.
-  we'll want to have a way to on first call to non-gmp, do a seed if needed and reconfig.
+- measure performance, add comments to docs
+- random primes in XS
+- re-validation of PP RandomPrimes with new rand functions
+- remove RandomPrimesGMP
+- file RT with Math::Random::Secure about 32-bit doubles
+- Make sure the PP ISAAC matches the XS one, on 32-bit and big endian
+- urandomm: call GMP from Perl or objectify in XS
+
+- A mechanism for reseeding with good entropy would be nice.
+
+- Decide whether to fully add these functions:
+  nth_ramanujan_prime_upper
+  nth_ramanujan_prime_lower
+  nth_ramanujan_prime_approx
+  ramanujan_prime_count_upper
+  ramanujan_prime_count_lower
+  ramanujan_prime_count_approx
+
+- fixup "todo" ramanujan prime limits before release
