--- a/TODO
+++ b/TODO
@@ -149,15 +149,20 @@ x add chacha20
 x move util funcs out of isaac.c in prep for chacha20.c
 x write Perl verson of chacha20
 x A mechanism for reseeding with good entropy would be nice.
+x doc new csrand function and behavior
+x write new version of chacha core
 
 - file RT with Math::Random::Secure about 32-bit doubles
   looks like a lot of modules do this.  Ouch.
 - get info on different drands.  TestU01, 45-bit look, cycles, x-y plots, etc.
 
-- doc new csrand function and behavior
+- redo docs with ISAAC -> ChaCha20
+- redo all benchmarks and text
+  pure Perl:  5.2x / 2.5x irand64 ChaCha20 / ChaCha8
+  pure Perl:  5.6x / 2.9x irand32 ChaCha20 / ChaCha8
+  pure Perl:  5.3x / 2.3x random_bytes ChaCha20 / ChaCha8
 - compare chacha20 Perl and C
 - publish info about Perl chacha20 (ianix, blog?).
-- write new version of chacha core
 - use endian macros in chacha.c for irand etc.  We can trim a lot.
 - more performance.  Include random primes speed diffs for ISAAC vs chacha
   For C:  5-20% slower.  For Perl:  0-100% slower.
