--- a/TODO
+++ b/TODO
@@ -151,12 +151,12 @@ x write Perl verson of chacha20
 x A mechanism for reseeding with good entropy would be nice.
 x doc new csrand function and behavior
 x write new version of chacha core
+x redo docs with ISAAC -> ChaCha20
 
 - file RT with Math::Random::Secure about 32-bit doubles
   looks like a lot of modules do this.  Ouch.
 - get info on different drands.  TestU01, 45-bit look, cycles, x-y plots, etc.
 
-- redo docs with ISAAC -> ChaCha20
 - redo all benchmarks and text
   pure Perl:  5.2x / 2.5x irand64 ChaCha20 / ChaCha8
   pure Perl:  5.6x / 2.9x irand32 ChaCha20 / ChaCha8
@@ -165,9 +165,9 @@ x write new version of chacha core
 - publish info about Perl chacha20 (ianix, blog?).
 - use endian macros in chacha.c for irand etc.  We can trim a lot.
 - more performance.  Include random primes speed diffs for ISAAC vs chacha
-  For C:  5-20% slower.  For Perl:  0-100% slower.
+  For C:  5-20% slower.  For Perl:  0-100% slower.  Remeasure.
 - redo random tests that rely on state
-- QR test 2.2.1 fail?
+- Fix 32-bit pure perl
 
 
 - Decide whether to fully add these functions:
